objects/RMA_Product__c.object
<CustomObject>
    <fields>
        <fullName>AccountCountry__c</fullName>
        <formula>IF( ISBLANK( RMA__r.Case__c ) ,&apos;&apos;, RMA__r.Case__r.Account.Country__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountToBeInvoicedForTheRepair__c</fullName>
        <label>Account To Be Invoiced For The Repair</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprobationDate__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <description>I2P-RR: MAY2013 RELEASE</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApproverLevel1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>I2P-RR: MAY2013RELEASE</description>
        <label>Approver Level1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Return_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApproverLevel2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>I2P-RR: MAY2013RELEASE</description>
        <label>Approver Level2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Return_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BackOfficeId__c</fullName>
        <label>Back Office Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackOfficeSystem__c</fullName>
        <formula>TEXT(RMA__r.BackOfficesystem__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Back Office System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingMethod__c</fullName>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WarrantyStatus__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>After Inspection</fullName>
                </value>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>From Costs</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Free of charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <description>I2P - RR: Oct2014 Release</description>
        <label>TECH_BusinessUnit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Reason__c</fullName>
        <label>Reason for Cancellation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>I2P-RR: MAY2013</description>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Return_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChangeProduct__c</fullName>
        <formula>HYPERLINK(&apos;/apex/VFP73_AddRMAProduct?id=&apos; + Id +&apos;&amp;Mode=chp&apos; , &apos; [Change Product]&apos; ,&apos;_top&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Product Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>I2P: Oct2014 Release</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommercialReference__c</fullName>
        <description>I2P-RR: Oct14 Release</description>
        <label>Commercial Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <description>I2P-RR: MAY2013 RELEASE</description>
        <label>Return Center - Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CopyTEXExpertCenter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>I2P-RR: OCT2013 RELEASE</description>
        <label>Same center as on TEX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CountryOfBackOfficeSystem__c</fullName>
        <formula>RMA__r.CountryOfBackOfficeSystems__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Of Back Office System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPickUpCarrierName__c</fullName>
        <label>Customer Pick Up Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPickUpCarrierTrackingNumber__c</fullName>
        <label>Customer Pick Up Carrier Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerRepairPONumber__c</fullName>
        <label>Customer Repair PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerResolution__c</fullName>
        <description>Release Dec12 - New Field - Picklist to capture the Customer Resolution</description>
        <label>Customer Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ProductCondition__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AXN + TEX</fullName>
                </value>
                <value>
                    <fullName>AXR + TEX</fullName>
                </value>
                <value>
                    <fullName>RFC + TEX</fullName>
                </value>
                <value>
                    <fullName>REP + TEX</fullName>
                </value>
                <value>
                    <fullName>AXN</fullName>
                </value>
                <value>
                    <fullName>RET</fullName>
                </value>
                <value>
                    <fullName>RFC</fullName>
                </value>
                <value>
                    <fullName>REP</fullName>
                </value>
                <value>
                    <fullName>AXR</fullName>
                </value>
                <value>
                    <fullName>TEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateCode__c</fullName>
        <inlineHelpText>Enter Multiple Date Codes separated by comma&apos;s. Should not exceeded 255 characters.</inlineHelpText>
        <label>Date Code(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failing_Component__c</fullName>
        <description>Identify the component which is failing in the system.</description>
        <inlineHelpText>Identify the component which is failing in the system.</inlineHelpText>
        <label>Failing Component</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No failing component</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Arc chamber</fullName>
                </value>
                <value>
                    <fullName>Auxiliary board</fullName>
                </value>
                <value>
                    <fullName>Button / Switch</fullName>
                </value>
                <value>
                    <fullName>Capacitor</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Chassis</fullName>
                </value>
                <value>
                    <fullName>Cover</fullName>
                </value>
                <value>
                    <fullName>Circuit breaker / Trip unit / Relay</fullName>
                </value>
                <value>
                    <fullName>Connectors / Lugs</fullName>
                </value>
                <value>
                    <fullName>Contact / Coil</fullName>
                </value>
                <value>
                    <fullName>CPU / Processor</fullName>
                </value>
                <value>
                    <fullName>Current path / Wiring</fullName>
                </value>
                <value>
                    <fullName>Display / Indicator</fullName>
                </value>
                <value>
                    <fullName>Documentation / Instructions</fullName>
                </value>
                <value>
                    <fullName>Electronic component</fullName>
                </value>
                <value>
                    <fullName>Firmware</fullName>
                </value>
                <value>
                    <fullName>Handle</fullName>
                </value>
                <value>
                    <fullName>Inverter</fullName>
                </value>
                <value>
                    <fullName>Labels / Name plates</fullName>
                </value>
                <value>
                    <fullName>Magnetics</fullName>
                </value>
                <value>
                    <fullName>Main board</fullName>
                </value>
                <value>
                    <fullName>Mechanical component</fullName>
                </value>
                <value>
                    <fullName>Memory</fullName>
                </value>
                <value>
                    <fullName>Motor</fullName>
                </value>
                <value>
                    <fullName>Mounting feet / Guides</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>PLC</fullName>
                </value>
                <value>
                    <fullName>Power supply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Mode__c</fullName>
        <description>Identify the mode in which the above component is failing.</description>
        <inlineHelpText>Identify the mode in which the above component is failing.</inlineHelpText>
        <label>Failure Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Aspect</fullName>
                </value>
                <value>
                    <fullName>Dimension</fullName>
                </value>
                <value>
                    <fullName>Function</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Thermal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No fault found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <description>I2P-RR: Oct14 Release</description>
        <label>Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow__c</fullName>
        <formula>IF(NOT( ISBLANK(TEXT(ReceivedbyLocalLogisticsCenter__c)) ),
image(&quot;/resource/&quot; 
&amp; Case(  
TEXT(LogisticsStatus__c), &apos;&apos; ,&quot;STR_RRMay2013LS1&quot;,
&apos;In transit to Local Logistic Center *&apos; ,&quot;STR_RRMay2013LS2&quot;,
&apos;Assessment at Logistic Center&apos; ,&quot;STR_RRMay2013LS3&quot;,
&apos;In Transit to Return Center&apos;,&quot;STR_RRMay2013LS4&quot;,
&apos;Delivered to Return Center&apos;,&quot;STR_RRMay2013LS5&quot;,
&apos;Sent Back to Customer&apos;,&quot;STR_RRMay2013LS6&quot;,
&apos;Received by Customer&apos;,&quot;STR_RRMay2013LS7&quot;
,&apos;&apos;)
,&quot;GATE&quot;, 125,700),
 
image(&quot;/resource/&quot; 
&amp; Case(  
TEXT(LogisticsStatus__c), &apos;&apos; ,&quot;STR_RRMay2013LS1&quot;,
&apos;In transit to Local Logistic Center *&apos; ,&quot;STR_RRMay2013LS2&quot;,
&apos;In Transit to Return Center&apos;,&quot;STR_RRMay2013LS1_1&quot;,
&apos;Delivered to Return Center&apos;,&quot;STR_RRMay2013LS1_2&quot;,
&apos;Sent Back to Customer&apos;,&quot;STR_RRMay2013LS1_3&quot;,
&apos;Received by Customer&apos;,&quot;STR_RRMay2013LS1_4&quot;
,&apos;&apos;)
,&quot;GATE&quot;, 125,700))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Flow&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForwardedToReturnCenter__c</fullName>
        <label>Forwarded To Return Center</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LocalShippingAddress__c</fullName>
        <description>2012R04 - Local Shipping Address</description>
        <formula>ShippingStreetLocalLang__c &amp; BR() &amp; 
ShippingLocalAdditionalAddress__c &amp; BR() &amp; 
ShippingZipCode__c &amp; &apos; &apos; &amp; ShippingLocalCity__c &amp; BR() &amp; 
ShippingPOBox__c &amp; &apos; &apos; &amp; ShippingPOBoxZip__c &amp; BR() &amp; 
ShippingLocalCounty__c &amp; BR() &amp; 
ShippingStateProvince__r.Name &amp; BR() &amp; 
ShippingCountry__r.Name</formula>
        <label>Return Center Address (Local Language)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogisticsCenterERPReference__c</fullName>
        <label>Logistics Center ERP Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogisticsStatus__c</fullName>
        <label>Logistics Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In transit to Local Logistic Center *</fullName>
                </value>
                <value>
                    <fullName>Assessment at Logistic Center</fullName>
                </value>
                <value>
                    <fullName>In Transit to Return Center</fullName>
                </value>
                <value>
                    <fullName>Delivered to Return Center</fullName>
                </value>
                <value>
                    <fullName>Sent Back to Customer</fullName>
                </value>
                <value>
                    <fullName>Received By Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderedCommercialReference__c</fullName>
        <inlineHelpText>The real commercial reference which has been ordered by the costumer, it can be the Ordering code for a configurable product, or an old commercial reference which is no longer in our catalogue...</inlineHelpText>
        <label>Ordered Commercial Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Manual Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutboundCarrierName__c</fullName>
        <label>Outbound Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutboundCarrierTrackingNumber__c</fullName>
        <label>Outbound Carrier Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCondition__c</fullName>
        <description>Release DEC12 -New Field - Pick list to capture the Production Condition</description>
        <label>Product Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defective</fullName>
                </value>
                <value>
                    <fullName>Unused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <label>TECH_ProductDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <description>2012R04</description>
        <label>Product Family</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <description>I2P-RR: Oct14 Release</description>
        <label>TECH_ProductGroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <description>I2P-RR: Oct14 Release</description>
        <label>TECH_ProductLine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSuccession__c</fullName>
        <description>I2P-RR: Oct14 Release</description>
        <label>TECH_ProductSuccession</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_TEX__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>REP_TEX</label>
        <referenceTo>TEX__c</referenceTo>
        <relationshipLabel>Return Items</relationshipLabel>
        <relationshipName>Return_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>Return Request</label>
        <referenceTo>RMA__c</referenceTo>
        <relationshipLabel>Return Items</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RealCustomerReference__c</fullName>
        <label>Real Customer Reference</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceivedbyCustomer__c</fullName>
        <label>Received by Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReceivedbyLocalLogisticsCenter__c</fullName>
        <label>Received by Local Logistic Center</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReceivedbyReturnCenter__c</fullName>
        <label>Received by Return Center</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RepairCompleted__c</fullName>
        <description>OCT 2015 Release</description>
        <label>Repair Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RepairStarted__c</fullName>
        <description>OCT 2015 Release</description>
        <label>Repair Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RepairStatus__c</fullName>
        <label>Repair Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quotation in progress</fullName>
                </value>
                <value>
                    <fullName>Awaiting quotation acceptance</fullName>
                </value>
                <value>
                    <fullName>Awaiting repair</fullName>
                </value>
                <value>
                    <fullName>Repair in progress</fullName>
                </value>
                <value>
                    <fullName>Repair completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReturnCenterAdditionalInformation__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.RCAdditionalInformation__c)</formula>
        <label>Return Center - Additional Information.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterAddressAll__c</fullName>
        <description>I2P Oct 2015 Release</description>
        <label>Return Center Address</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ReturnCenterAddress__c</fullName>
        <formula>ReturnCenterCity__c &amp; BR() &amp; 
ReturnCenterAdditionalInformation__c &amp; BR() &amp; 
ReturnCenterZipCode__c &amp; &apos; &apos; &amp; ReturnCenterCity__c &amp; BR() &amp; 
ReturnCenterPOBox__c &amp; &apos; &apos; &amp; ReturnCenterPOBoxZipCode__c &amp; BR() &amp; 
ReturnCenterCounty__c &amp; BR() &amp; 
ReturnCenterStateProvince__c &amp; BR() &amp; 
ReturnCenterCountry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Center Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterCity__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.RCCity__c)</formula>
        <label>Return Center - City.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterContactName__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.RCContactName__c)</formula>
        <label>Return Center - Contact Name.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterCountry__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.RCCountry__r.Name )</formula>
        <label>Return Center - Country.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterCounty__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.RCCounty__c)</formula>
        <label>Return Center - County.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterFax__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.RCFax__c)</formula>
        <label>Return Center - Fax.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterLocalAdditionalInfo__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.RCAdditionalInformationLocal_Language__c)</formula>
        <label>Return Center - Local Additional Info.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterLocalCity__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.RCLocalCity__c)</formula>
        <label>Return Center - Local City.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterLocalCounty__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.RCLocalCounty__c)</formula>
        <label>Return Center - Local County.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterLocalStreet__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.RCStreetLocalLanguage__c)</formula>
        <label>Return Center - Local Street.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterPOBoxZipCode__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.RCPOBoxZipCode__c)</formula>
        <label>Return Center - PO Box Zip Code.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterPOBox__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.RCPOBox__c)</formula>
        <label>Return Center - PO Box.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterPhone__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.RCPhone__c)</formula>
        <label>Return Center - Phone.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterStateProvince__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.RCStateProvince__r.Name)</formula>
        <label>Return Center - State/Province.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterStreet__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.Street__c)</formula>
        <label>Return Center - Street.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenterZipCode__c</fullName>
        <formula>IF(ISNULL(ReturnCenter__c),null, ReturnCenter__r.RCZipCode__c)</formula>
        <label>Return Center - Zip Code.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnCenter__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Return Center</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 4) OR (1 AND 6 AND 5) OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Location_Type__c</field>
                <operation>notEqual</operation>
                <value>Customer Care Center</value>
            </filterItems>
            <filterItems>
                <field>$Source.RepairStatus__c</field>
                <operation>equals</operation>
                <value>Canceled</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>BusinessRiskEscalationEntity__c.Status__c</field>
                <operation>equals</operation>
                <value>To be deactivated</value>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BusinessRiskEscalationEntity__c</referenceTo>
        <relationshipLabel>Return Items</relationshipLabel>
        <relationshipName>Return_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReturnItem_VIPFlag__c</fullName>
        <formula>RMA__r.AccountName__r.Account_VIPIcon__c</formula>
        <label>&lt;VIPIcon&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Center_Address__c</fullName>
        <formula>ReturnCenterStreet__c &amp;&apos; &apos; &amp; 
ReturnCenterAdditionalInformation__c &amp;&apos; &apos; &amp; 
ReturnCenterZipCode__c &amp; &apos; &apos; &amp; ReturnCenterCity__c &amp;&apos; &apos; &amp; 
ReturnCenterPOBox__c &amp; &apos; &apos; &amp; ReturnCenterPOBoxZipCode__c &amp;&apos; &apos; &amp; 
ReturnCenterCounty__c &amp;&apos; &apos; &amp; 
ReturnCenterStateProvince__c &amp;&apos; &apos; &amp; 
ReturnCenterCountry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Center Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturncenterERPReference__c</fullName>
        <label>Return center ERP reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SentBacktoCustomer__c</fullName>
        <label>Sent Back to Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <inlineHelpText>Enter Multiple Serial Numbers separated by comma&apos;s. Should not exceeded 255 characters.</inlineHelpText>
        <label>Serial Number(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippedFromCustomer__c</fullName>
        <label>Shipped From Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShippingAdditionalAddress__c</fullName>
        <description>2012R04 – Shipping Address: Additional Information</description>
        <inlineHelpText>Further precision for the address like Building, Floor etc.</inlineHelpText>
        <label>Return Center - Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <description>2012R04 - Shipping Address</description>
        <formula>ShippingStreet__c &amp; BR() &amp; 
ShippingAdditionalAddress__c &amp; BR() &amp; 
ShippingZipCode__c &amp; &apos; &apos; &amp; ShippingCity__c &amp; BR() &amp; 
ShippingPOBox__c &amp; &apos; &apos; &amp; ShippingPOBoxZip__c &amp; BR() &amp; 
ShippingCounty__c &amp; BR() &amp; 
ShippingStateProvince__r.Name &amp; BR() &amp; 
ShippingCountry__r.Name</formula>
        <label>Return Center Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <description>2012R04 – Shipping Address: City</description>
        <label>Return Center - City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingContactName__c</fullName>
        <label>Return Center - Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>2012R04 – Shipping Address: Country</description>
        <label>Return Center - Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Return Items</relationshipLabel>
        <relationshipName>Return_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShippingCounty__c</fullName>
        <description>2012R04 – Shipping Address: County</description>
        <label>Return Center - County</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingFax__c</fullName>
        <label>Return Center - Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShippingLocalAdditionalAddress__c</fullName>
        <description>2012R04 – Shipping Address: Additional Information (Local Language)</description>
        <inlineHelpText>Further local precision for the address like Building, Floor etc.</inlineHelpText>
        <label>Return Center - Local Additional Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingLocalCity__c</fullName>
        <description>2012R04 – Shipping Address: Local City</description>
        <label>Return Center - Local City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingLocalCounty__c</fullName>
        <label>Return Center - Local County</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingPOBoxZip__c</fullName>
        <description>2012R04 – Shipping Address: PO Box Zip Code</description>
        <label>Return Center - PO Box Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingPOBox__c</fullName>
        <description>2012R04 – Shipping Address: PO Box</description>
        <label>Return Center - PO Box</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingPhone__c</fullName>
        <label>Return Center - Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShippingStateProvince__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>2012R04 – Shipping Address: State/Province</description>
        <label>Return Center - State/Province</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>StateProvince__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.ShippingCountry__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.BypassVR__c</field>
                <operation>equals</operation>
                <value>true</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>StateProvince__c</referenceTo>
        <relationshipLabel>Return Items</relationshipLabel>
        <relationshipName>Return_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShippingStreetLocalLang__c</fullName>
        <description>2012R04 – Shipping Address: Street (Local Language)</description>
        <label>Return Center - Local Street</label>
        <type>TextArea</type>
    </fields>
</CustomObject>